manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: crash-course
spec:
  parentRefs:
  - name: crash-course-gateway
    namespace: kgateway-system
  hostnames:
  - "k8s2025.kubesimplify.com"
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: /
    backendRefs:
    - name: frontend
      namespace: crash-course
      port: 80
      kind: Service
